[metadata]
name = plover-undoable
version = 0.0.0
keywords = plover plover_plugin

description = Undo strokes that are not normally undoable

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev12
py_modules =
    index

[options.entry_points]
plover.command =
    undoable = index:undoable
    clrtrans = index:clrtrans