[metadata]
name = plover-undo-tools
version = 0.0.0
keywords = plover plover_plugin

description = Customize the undo behavior of certain entries
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0rc2
py_modules =
    index

[options.entry_points]
plover.command =
    undoable = index:undoable
    undo_with = index:undo_with
    clrtrans = index:clrtrans